codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_band_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: "captured.join(\"\\n\")"
---
› Summarize recent commits


 tui  󱚥 gpt-5-codex        vermissian   feature/status-polish…   prod 
